# PSSR

./: .cursorrules  .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  gp_regressor_profile.prof  old_gp_regressor_profile.prof  profile_gp_regressor.py  profile_old_gp_regressor.py  pyproject.toml
.cursor/rules/: 01-project-overview.md  02-imports.md  03-code-style.md  04-project-structure.md  05-best-practices.md
log/: gp.csv  gp_settings.csv
slim_gsgp_lib_np/: main_gp.py
slim_gsgp_lib_np/algorithms/GP/: gp.py
src/pssr/: __init__.py
src/pssr/core/: __init__.py  callbacks.py  fitness.py  functions.py  misc.py  normalization.py  primitives.py  selection.py  verbose.py
src/pssr/core/representations/: individual.py  population.py
src/pssr/gp/: gp_evolution.py  gp_initialization.py  gp_presets.py  gp_regressor.py  gp_utils.py  gp_variation.py
src/pssr/gp/gp_variators/: gp_crossover.py  gp_mutation.py  utils.py
src/pssr/pssr_model/: __init__.py  condition.py  ensemble_individual.py  ensemble_initialization.py  ensemble_operators.py  pss_presets.py  pss_regressor.py  specialist.py
tests/: test_gp.py  test_individual_vs_ensemble.py  test_profile_gp.py  test_pssr.py  test_pssr_vs_multi_slim.py  test_selection.py
tests/comparison_results/: results.csv  results.json  stats.json
